--- a/templates/index.html
+++ b/templates/index.html
@@ -16,21 +16,11 @@
 </head>
 <body>
     <div class="container-xs text-center">
+        
+        <!-- Cabezera -->
         <div class="row">
             <div class="col">
-                <label for="add-data" class="form-label">Cargar inventario</label>
-                <button type="button" class="btn btn-primary">
-                    <i class="bi bi-cloud-arrow-up" style="font-size: 2rem;"></i>
-                </button>
-            </div>
-            <div class="col-6">
                 <h1>Inventario de Insumos</h1>
-            </div>
-            <div class="col">
-                <label for="add-item" class="form-label">Añadir ítem</label>
-                <button type="button" class="btn btn-primary">
-                    <i class="bi bi-clipboard2-plus" style="font-size: 2rem;"></i>
-                </button>
             </div>
         </div>
         <div class="row">
