--- a/templates/index.html
+++ b/templates/index.html
@@ -40,50 +40,58 @@
             <table class="table table-striped table-hover align-middle" id="inventoryTable">
                 <thead class="table-secondary">
                     <tr>
-                        <th>Edit</th>
-                        <th>Name</th>
-                        <th>Quantity</th>
+                        <th>Editar</th>
+                        <th>Nombre</th>
+                        <th>Estado</th>
+                        <th>Cantidad</th>
                         <th>In/Out</th>
-                        <th>Package</th>
-                        <th>Location</th>
-                        <th>Del</th>
+                        <th>Empaque</th>
+                        <th>Ubicación</th>
+                        <th>Elim.</th>
                     </tr>
                 </thead>
                 <tbody>
-                    {% for item in items %}
+                    {% for item in processed_items %}
                         <tr>
                             <td>
                                 <button type="button" class="btn btn-primary" 
                                 data-bs-toggle="modal" 
                                 data-bs-target="#editModal" 
-                                data-bs-id="{{ item['id'] }}"
-                                data-bs-name="{{ item['Elemento_Movimiento'] }}"
-                                data-bs-quantity="{{ item['Cantidad_Actual'] }}"
-                                data-bs-package="{{ item['Empaque'] }}"
-                                data-bs-location="{{ item['Lugar'] }}">
+                                data-bs-id="{{ item.id }}"
+                                data-bs-name="{{ item.nombre }}"
+                                data-bs-quantity="{{ item.cantidad_actual }}"
+                                data-bs-package="{{ item.empaque }}"
+                                data-bs-location="{{ item.ubicacion }}">
                                     <i class="bi bi-pencil-square"></i>
                                 </button>
                             </td>
-                            <td>{{ item['Elemento_Movimiento'] }}</td>
-                            <td>{{ item['Cantidad_Actual'] }}</td>
+                            <td>{{ item.nombre }}</td>
+                            <td>
+                                <span class="badge text-bg-{{ item.estado }}">
+                                    {{ "OK" if item.estado == 'success' 
+                                    else 'Bajo' if item.estado == 'warning' 
+                                    else "Crítico"  }}
+                                </span>
+                            </td>
+                            <td>{{ item.cantidad_actual }}</td>
                             <td>
                                 <button type="button" class="btn btn-secondary"
                                 data-bs-toggle="modal"
                                 data-bs-target="#entryModal"
-                                data-bs-id="{{ item['id'] }}"
-                                data-bs-name="{{ item['Elemento_Movimiento'] }}"
-                                data-bs-quantity="{{ item['Cantidad_Actual'] }}">
+                                data-bs-id="{{ item.id }}"
+                                data-bs-name="{{ item.nombre }}"
+                                data-bs-quantity="{{ item.cantidad_actual }}">
                                     <i class="bi bi-plus-slash-minus"></i>
                                 </button>
                             </td>
-                            <td>{{ item['Empaque'] }}</td>
-                            <td>{{ item['Lugar'] }}</td>
+                            <td>{{ item.empaque }}</td>
+                            <td>{{ item.ubicacion }}</td>
                             <td>
                                 <button type="button" class="btn btn-danger"
                                 data-bs-toggle="modal"
                                 data-bs-target="#deleteModal"
-                                data-bs-id="{{ item['id'] }}"
-                                data-bs-name="{{ item['Elemento_Movimiento'] }}">
+                                data-bs-id="{{ item.id }}"
+                                data-bs-name="{{ item.nombre }}">
                                     <i class="bi bi-trash3"></i>
                                 </button>
                             </td>
