--- a/templates/index.html
+++ b/templates/index.html
@@ -9,38 +9,55 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Boostrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- DataTables CSS-->
+    <link href="https://cdn.datatables.net/2.2.1/css/dataTables.dataTables.css" rel="stylesheet">
+    <!-- <link  href="../DataTables/datatables.min.css" rel="stylesheet"> -->
+
 
     <!-- CSS personalizado -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <div class="container-xs text-center">
-        
-        <!-- Cabezera -->
-        <div class="row">
-            <div class="col">
-                <h1>Inventario de Insumos</h1>
+    <nav class="navbar navbar-expand-sm bg-dark border-bottom border-body" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">LABs</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle active" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Insumos
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item active" aria-current="page" href="#">Inventario</a></li>
+                            <li><a class="dropdown-item" href="#">Inactivos</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('history') }}">Historial</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Trabajadores</a>
+                    </li>
+                </ul>
+                <form class="d-flex ms-auto" role="search">
+                    <input class="form-control" id="searchFilter" type="search" placeholder="Search" aria-label="Search">
+                </form>
             </div>
         </div>
-        <div class="row">
-            <!-- Campo de búsqueda -->
-            <div class="col">
-                <input 
-                    type="text" 
-                    id="searchInput" 
-                    class="form-control" 
-                    placeholder="Buscar por nombre..." 
-                    onkeyup="filterTable()">
-            </div>
-        </div>
+    </nav>
+    
+    <div class="container">
 
         <!-- Tabla de insumos -->
         <div class="table-responsive">
-            <table class="table table-striped table-hover align-middle" id="inventoryTable">
+            <table class="table table-striped table-hover align-middle" id="inventory-table">
                 <thead class="table-secondary">
                     <tr>
                         <th>Editar</th>
-                        <th>Nombre</th>
+                        <th>Insumo</th>
                         <th>Estado</th>
                         <th>Cantidad</th>
                         <th>In/Out</th>
@@ -51,51 +68,53 @@
                 </thead>
                 <tbody>
                     {% for item in items %}
-                        <tr>
-                            <td>
-                                <button type="button" class="btn btn-primary" 
-                                data-bs-toggle="modal" 
-                                data-bs-target="#editModal" 
-                                data-bs-id="{{ item.id }}"
-                                data-bs-name="{{ item.nombre }}"
-                                data-bs-details="{{ item.detalles }}"
-                                data-bs-quantity="{{ item.cantidad }}"
-                                data-bs-package_id="{{ item.empaque_id }}"
-                                data-bs-location_id="{{ item.ubicacion_id }}">
-                                    <i class="bi bi-pencil-square"></i>
-                                </button>
-                            </td>
-                            <td>{{ item.nombre }}</td>
-                            <td>
-                                <span class="badge text-bg-{{ item.estado }}">
-                                    {{ "OK" if item.estado == 'success' 
-                                    else 'Bajo' if item.estado == 'warning' 
-                                    else "Crítico"  }}
-                                </span>
-                            </td>
-                            <td>{{ item.cantidad }}</td>
-                            <td>
-                                <button type="button" class="btn btn-secondary"
-                                data-bs-toggle="modal"
-                                data-bs-target="#entryModal"
-                                data-bs-id="{{ item.id }}"
-                                data-bs-name="{{ item.nombre }}"
-                                data-bs-quantity="{{ item.cantidad }}">
-                                    <i class="bi bi-plus-slash-minus"></i>
-                                </button>
-                            </td>
-                            <td>{{ item.empaque }}</td>
-                            <td>{{ item.ubicacion }}</td>
-                            <td>
-                                <button type="button" class="btn btn-danger"
-                                data-bs-toggle="modal"
-                                data-bs-target="#deleteModal"
-                                data-bs-id="{{ item.id }}"
-                                data-bs-name="{{ item.nombre }}">
-                                    <i class="bi bi-trash3"></i>
-                                </button>
-                            </td>
-                        </tr>
+                        {% if item.activo %}
+                            <tr>
+                                <td>
+                                    <button type="button" class="btn btn-primary" 
+                                    data-bs-toggle="modal" 
+                                    data-bs-target="#editModal" 
+                                    data-bs-id="{{ item.id }}"
+                                    data-bs-name="{{ item.nombre }}"
+                                    data-bs-details="{{ item.detalles }}"
+                                    data-bs-quantity="{{ item.cantidad }}"
+                                    data-bs-package_id="{{ item.empaque_id }}"
+                                    data-bs-location_id="{{ item.ubicacion_id }}">
+                                        <i class="bi bi-pencil-square"></i>
+                                    </button>
+                                </td>
+                                <td>{{ item.nombre }}</td>
+                                <td>
+                                    <span class="badge text-bg-{{ item.estado }}">
+                                        {{ "OK" if item.estado == 'success' 
+                                        else 'Bajo' if item.estado == 'warning' 
+                                        else "Crítico"  }}
+                                    </span>
+                                </td>
+                                <td>{{ item.cantidad }}</td>
+                                <td>
+                                    <button type="button" class="btn btn-secondary"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#entryModal"
+                                    data-bs-id="{{ item.id }}"
+                                    data-bs-name="{{ item.nombre }}"
+                                    data-bs-quantity="{{ item.cantidad }}">
+                                        <i class="bi bi-plus-slash-minus"></i>
+                                    </button>
+                                </td>
+                                <td>{{ item.empaque }}</td>
+                                <td>{{ item.ubicacion }}</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#deleteModal"
+                                    data-bs-id="{{ item.id }}"
+                                    data-bs-name="{{ item.nombre }}">
+                                        <i class="bi bi-trash3"></i>
+                                    </button>
+                                </td>
+                            </tr>
+                        {% endif %}
                     {% endfor %}
                 </tbody>
             </table>
@@ -141,14 +160,20 @@
                                     {% endfor %}
                                 </select>
                             </div>
-                            <div class="mb-3">
-                                <label for="edit-worker" class="form-label">Responsable</label>
-                                <select class="form-select" id="edit-worker" name="edit-worker" required>
-                                    <option selected value="">Seleccione una opción</option>
-                                    {% for worker in workers %}
-                                    <option value="{{ worker.id }}">{{ worker.nombre }}</option>
-                                    {% endfor %}
-                                </select>
+                            <div class="container worker">
+                                <div class="mb-3">
+                                    <label for="edit-worker" class="form-label">Responsable</label>
+                                    <select class="form-select" id="edit-worker" name="worker" required>
+                                        <option selected value="">Seleccione una opción</option>
+                                        {% for worker in workers %}
+                                        <option value="{{ worker.id }}">{{ worker.nombre }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="edit-comment" class="form-label">Comentarios</label>
+                                    <textarea class="form-control" id="edit-comment" name="comment" placeholder="Agregue una descripción de la edición, si es necesario"></textarea>
+                                </div>
                             </div>
                         </div>
                         <div class="modal-footer">
@@ -182,6 +207,7 @@
                             <div class="mb-3">
                                 <label for="entry-action" class="form-label">Acción</label>
                                 <select class="form-select" id="entry-action" name="action" onchange="setZeroValue()" required>
+                                    <option selected value="">Seleccione una opción</option>
                                     <option value="add">Añadir</option>
                                     <option value="subtract">Retirar</option>
                                 </select>
@@ -210,14 +236,20 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="mb-3">
-                                <label for="entry-worker" class="form-label">Responsable</label>
-                                <select class="form-select" id="entry-worker" name="entry-worker" required>
-                                    <option selected value="">Seleccione una opción</option>
-                                    {% for worker in workers %}
-                                    <option value="{{ worker.id }}">{{ worker.nombre }}</option>
-                                    {% endfor %}
-                                </select>
+                            <div class="container worker">
+                                <div class="mb-3">
+                                    <label for="entry-worker" class="form-label">Responsable</label>
+                                    <select class="form-select" id="entry-worker" name="worker" required>
+                                        <option selected value="">Seleccione una opción</option>
+                                        {% for worker in workers %}
+                                        <option value="{{ worker.id }}">{{ worker.nombre }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="entry-comment" class="form-label">Comentarios</label>
+                                    <textarea class="form-control" id="entry-comment" name="comment" placeholder="Agregue una descripción de la edición, si es necesario"></textarea>
+                                </div>
                             </div>
                         </div>
                         <div class="modal-footer">
@@ -243,12 +275,16 @@
                             <p>¿Está seguro de que desea eliminar <strong id="delete-name"></strong> del inventario?</p>
                             <div class="mb-3">
                                 <label for="delete-worker" class="form-label">Responsable</label>
-                                <select class="form-select" id="delete-worker" name="delete-worker" required>
+                                <select class="form-select" id="delete-worker" name="worker" required>
                                     <option selected value="">Seleccione una opción</option>
                                     {% for worker in workers %}
                                     <option value="{{ worker.id }}">{{ worker.nombre }}</option>
                                     {% endfor %}
                                 </select>
+                            </div>
+                            <div class="mb-3">
+                                <label for="delete-comment" class="form-label">Comentarios</label>
+                                <textarea class="form-control" id="delete-comment" name="comment" placeholder="Agregue una descripción de la edición si es necesario"></textarea>
                             </div>
                         </div>
                         <div class="modal-footer">
@@ -261,11 +297,15 @@
         </div>
     </div>
 
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Scripts personalizado -->
-    <script src="{{ url_for('static', filename='scripts.js') }}"></script>
-
+            <!-- Bootstrap JS -->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+            <!-- Scripts JQuery -->
+            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+            <!-- DataTable JS -->
+            <script src="https://cdn.datatables.net/2.2.1/js/dataTables.js"></script>
+            <!-- <script src="../DataTables/datatables.min.js"></script> -->
+            <!-- Scripts personalizados -->
+            <script src="{{ url_for('static', filename='scripts.js') }}"></script>
+            <script type="module" src="../static/tableData.js"></script>
 </body>
 </html>
