--- a/templates/inactive.html
+++ b/templates/inactive.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Historial</title>
+    <title>Insumos inactivos</title>
 
     <!-- Boostrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -17,7 +17,6 @@
     <!-- CSS personalizado -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
-
 <body>
     <nav class="navbar navbar-expand-sm bg-dark border-bottom border-body" data-bs-theme="dark">
         <div class="container-fluid">
@@ -33,8 +32,8 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="{{ url_for('index') }}">Inventario</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('inactive') }}">Inactivos</a></li>
-                            <li><a class="dropdown-item active" aria-current="page" href="#">Historial</a></li>
+                            <li><a class="dropdown-item active" aria-current="page" href="#">Inactivos</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('history') }}">Historial</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -44,74 +43,17 @@
             </div>
         </div>
     </nav>
-    <div class="container text-center">
-
-        <!-- Tabla de historial -->
-        <div class="table-responsive">
-            <table class="table table-striped table-hover align-middle" id="history-table">
-                <thead class="table-secondary">
-                    <tr>
-                        <th>Fecha</th>
-                        <th>Insumo</th>
-                        <th>Tipo</th>
-                        <th>Detalles</th>
-                        <th>Trabajador</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for history in histories %}
-                        <tr>
-                            <td>{{ history.date }}</td>
-                            <td>{{ history.name }}</td>
-                            <td>{{ history.type }}</td>
-                            <td>{{ history.details }}</td>
-                            <td>{{ history.worker }}</td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </div>
-
-
-
-
-
-
-
-
-
-
-
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Scripts JQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- DataTable JS -->
+    <script src="https://cdn.datatables.net/2.2.1/js/dataTables.js"></script>
+    <!-- <script src="../DataTables/datatables.min.js"></script> -->
+    <!-- Scripts personalizados -->
+    <script src="{{ url_for('static', filename='scripts.js') }}"></script>
+    <script type="module" src="../static/tableData.js"></script>
 </body>
-
-
-
-        <!-- Bootstrap JS -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Scripts JQuery -->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <!-- DataTable JS -->
-        <script src="https://cdn.datatables.net/2.2.1/js/dataTables.js"></script>
-        <!-- <script src="../DataTables/datatables.min.js"></script> -->
-        <!-- Scripts personalizados -->
-        <script src="{{ url_for('static', filename='scripts.js') }}"></script>
-        <script type="module" src="../static/tableData.js"></script>
 </html>
