--- a/templates/index.html
+++ b/templates/index.html
@@ -32,14 +32,12 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item active" aria-current="page" href="#">Inventario</a></li>
-                            <li><a class="dropdown-item" href="#">Inactivos</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('inactive') }}">Inactivos</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('history') }}">Historial</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('history') }}">Historial</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Trabajadores</a>
+                        <a class="nav-link" href="{{ url_for('workers') }}">Trabajadores</a>
                     </li>
                 </ul>
                 <form class="d-flex ms-auto" role="search">
@@ -297,15 +295,15 @@
         </div>
     </div>
 
-            <!-- Bootstrap JS -->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-            <!-- Scripts JQuery -->
-            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-            <!-- DataTable JS -->
-            <script src="https://cdn.datatables.net/2.2.1/js/dataTables.js"></script>
-            <!-- <script src="../DataTables/datatables.min.js"></script> -->
-            <!-- Scripts personalizados -->
-            <script src="{{ url_for('static', filename='scripts.js') }}"></script>
-            <script type="module" src="../static/tableData.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Scripts JQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- DataTable JS -->
+    <script src="https://cdn.datatables.net/2.2.1/js/dataTables.js"></script>
+    <!-- <script src="../DataTables/datatables.min.js"></script> -->
+    <!-- Scripts personalizados -->
+    <script src="{{ url_for('static', filename='scripts.js') }}"></script>
+    <script type="module" src="../static/tableData.js"></script>
 </body>
 </html>
