--- a/templates/history.html
+++ b/templates/history.html
@@ -41,77 +41,48 @@
                         <a class="nav-link" href="{{ url_for('workers') }}">Trabajadores</a>
                     </li>
                 </ul>
+                <form class="d-flex ms-auto" role="search">
+                    <input class="form-control" id="searchFilter" type="search" placeholder="Search" aria-label="Search">
+                </form>
             </div>
         </div>
     </nav>
-    <div class="container text-center">
 
-        <!-- Tabla de historial -->
-        <div class="table-responsive">
-            <table class="table table-striped table-hover align-middle" id="history-table">
-                <thead class="table-secondary">
+    <!-- Tabla de historial -->
+    <div class="table-responsive">
+        <table class="table table-striped table-hover align-middle" id="history-table">
+            <thead class="table-secondary">
+                <tr>
+                    <th>Fecha</th>
+                    <th>Insumo</th>
+                    <th>Tipo</th>
+                    <th>Detalles</th>
+                    <th>Trabajador</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for history in histories %}
                     <tr>
-                        <th>Fecha</th>
-                        <th>Insumo</th>
-                        <th>Tipo</th>
-                        <th>Detalles</th>
-                        <th>Trabajador</th>
+                        <td>{{ history.date }}</td>
+                        <td>{{ history.name }}</td>
+                        <td>{{ history.type }}</td>
+                        <td>{{ history.details }}</td>
+                        <td>{{ history.worker }}</td>
                     </tr>
-                </thead>
-                <tbody>
-                    {% for history in histories %}
-                        <tr>
-                            <td>{{ history.date }}</td>
-                            <td>{{ history.name }}</td>
-                            <td>{{ history.type }}</td>
-                            <td>{{ history.details }}</td>
-                            <td>{{ history.worker }}</td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 
-
-
-
-
-
-
-
-
-
-
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Scripts JQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- DataTable JS -->
+    <script src="https://cdn.datatables.net/2.2.1/js/dataTables.js"></script>
+    <!-- <script src="../DataTables/datatables.min.js"></script> -->
+    <!-- Scripts personalizados -->
+    <script src="{{ url_for('static', filename='scripts.js') }}"></script>
+    <script type="module" src="../static/tableData.js"></script>
 </body>
-
-
-
-        <!-- Bootstrap JS -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Scripts JQuery -->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <!-- DataTable JS -->
-        <script src="https://cdn.datatables.net/2.2.1/js/dataTables.js"></script>
-        <!-- <script src="../DataTables/datatables.min.js"></script> -->
-        <!-- Scripts personalizados -->
-        <script src="{{ url_for('static', filename='scripts.js') }}"></script>
-        <script type="module" src="../static/tableData.js"></script>
 </html>
