--- a/templates/workers.html
+++ b/templates/workers.html
@@ -40,10 +40,38 @@
                         <a class="nav-link active" aria-current="page" href="#">Trabajadores</a>
                     </li>
                 </ul>
+                <form class="d-flex ms-auto" role="search">
+                    <input class="form-control" id="searchFilter" type="search" placeholder="Search" aria-label="Search">
+                </form>
             </div>
         </div>
     </nav>
 
+    <!-- Tabla de trabajadores -->
+    <div class="table-responsive">
+        <table class="table table-striped table-hover align-middle" id="workers-table">
+            <thead class="table-secondary">
+                <tr>
+                    <th>Id</th>
+                    <th>Nombre</th>
+                    <th>Dependencia</th>
+                    <th>Cargo</th>
+                    <th>Correo</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for worker in workers %}
+                    <tr>
+                        <td>{{ worker.id }}</td>
+                        <td>{{ worker.nombre }}</td>
+                        <td>{{ worker.dependencia }}</td>
+                        <td>{{ worker.cargo }}</td>
+                        <td>{{ worker.correo }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
