Corrección de reactivación de insumo.

--- a/templates/index.html
+++ b/templates/index.html
@@ -295,9 +295,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- DataTable JS -->
     <script src="https://cdn.datatables.net/2.2.1/js/dataTables.js"></script>
-    <!-- <script src="../DataTables/datatables.min.js"></script> -->
     <!-- Scripts personalizados -->
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
+    <script src="{{ url_for('static', filename='indexModals.js') }}"></script>
     <script type="module" src="../static/tableData.js"></script>
 </body>
 </html>
