--- a/templates/inactive.html
+++ b/templates/inactive.html
@@ -127,9 +127,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- DataTable JS -->
     <script src="https://cdn.datatables.net/2.2.1/js/dataTables.js"></script>
-    <!-- <script src="../DataTables/datatables.min.js"></script> -->
     <!-- Scripts personalizados -->
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
+    <script src="{{ url_for('static', filename='activateModals.js') }}"></script>
     <script type="module" src="../static/tableData.js"></script>
 </body>
 </html>
