Se agrega el botón de edición de trabajadores

--- a/templates/workers.html
+++ b/templates/workers.html
@@ -52,6 +52,7 @@
         <table class="table table-striped table-hover align-middle" id="workers-table">
             <thead class="table-secondary">
                 <tr>
+                    <th>Editar</th>
                     <th>Id</th>
                     <th>Nombre</th>
                     <th>Dependencia</th>
@@ -62,6 +63,18 @@
             <tbody>
                 {% for worker in workers %}
                     <tr>
+                        <td>
+                            <button type="button" class="btn btn-primary"
+                            data-bs-toggle="modal"
+                            data-bs-target="#editModal"
+                            data-bs-id="{{ worker.id }}"
+                            data-bs-name="{{ worker.nombre }}"
+                            data-bs-branch="{{ worker.dependencia }}"
+                            data-bs-position="{{ worker.cargo }}"
+                            data-bs-email="{{ worker.correo }}">
+                            <i class="bi bi-pencil-square"></i>
+                        </button>
+                        </td>
                         <td>{{ worker.id }}</td>
                         <td>{{ worker.nombre }}</td>
                         <td>{{ worker.dependencia }}</td>
@@ -71,6 +84,69 @@
                 {% endfor %}
             </tbody>
         </table>
+    </div>
+
+    <!-- Modales -->
+    <!-- Modal Editar -->
+    <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form method="post" action="/edit">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="editModalLabel">Editar Trabajador</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <input type="hidden" name="id" id="edit-id">
+                        <div class="mb-3">
+                            <label for="edit-name" class="form-label">Nombre y Apellido</label>
+                            <input type="text" class="form-control" id="edit-name" name="name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="edit-branch" class="form-label">Dependencia</label>
+                            <select class="form-select" id="edit-branch" name="branch" required>
+                                <option value="">Seleccione</option>
+                                <option value="SALAS">SALAS</option>
+                                <option value="LABORATORIOS">LABORATORIOS</option>
+                                <option value="COORDINACION">COORDINACIÓN</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="edit-position" class="form-label">Cargo</label>
+                            <select class="form-select" id="edit-position" name="edit-position" required>
+                                <option value="">Seleccione</option>
+                                <option value="TÉCNICO">TÉCNICO</option>
+                                <option value="ASISTENTE DE COORD.">ASISTENTE DE COORD.</option>
+                                <option value="COORDINADOR">COORDINADOR</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="edit-email" class="form-label">Empaque</label>
+                            <input type="email" class="form-control" id="edit-email" name="email" required>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <div class="row justify-content-center">
+                            <div class="mb-3">
+                                <label for="edit-worker" class="form-label">Responsable</label>
+                                <select class="form-select" id="edit-worker" name="worker" required>
+                                    <option selected value="">Seleccione una opción</option>
+                                    {% for worker in workers %}
+                                    <option value="{{ worker.id }}">{{ worker.nombre }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label for="edit-comment" class="form-label">Comentarios</label>
+                                <textarea class="form-control" id="edit-comment" name="comment" placeholder="Agregue una descripción de la edición, si es necesario"></textarea>
+                            </div>
+                        </div>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="submit" class="btn btn-success">Guardar cambios</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 
     <!-- Bootstrap JS -->
