--- a/templates/workers.html
+++ b/templates/workers.html
@@ -130,7 +130,7 @@
                             </select>
                         </div>
                         <div class="mb-3">
-                            <label for="edit-email" class="form-label">Empaque</label>
+                            <label for="edit-email" class="form-label">Correo electrónico</label>
                             <input type="email" class="form-control" id="edit-email" name="email" required>
                         </div>
                     </div>
